# flysky

./: .gitignore  CLAUDE.md  COMMANDS.md  GESTURE_ALGORITHM_REFERENCE.md  INSTALL.md  PROGRESS.md  QBOT_OVERVIEW.md  README.md  setup_qbot_env.sh  team_flysky_project.md
scripts/: kinect_usb_reset.py  kobuki_drive_test.py  sim_behavior_test.py
src/behavior_node/: package.xml  setup.py
src/behavior_node/behavior_node/: pet_behavior_node.py
src/behavior_node/config/: behavior.yaml
src/behavior_node/launch/: qbot.launch.py
src/gesture_node/: package.xml  setup.cfg  setup.py
src/gesture_node/gesture_node/: gesture_classifier.py  gesture_command_node.py  hand_tracker.py  signals.py
src/gesture_node/gesture_node/mp_models/: README.md  mp_handpose.py  mp_palmdet.py
src/gesture_node/launch/: gesture_test.launch.py
src/kinect_camera/: package.xml  setup.cfg  setup.py
src/kinect_camera/config/: kinect.yaml
src/kinect_camera/kinect_camera/: kinect_rgbd.py
src/kinect_camera/launch/: kinect_rgbd.launch.py
src/vision_node/: package.xml  setup.py
src/vision_node/vision_node/: face_tracker_node.py
